@@ -41,8 +41,7 @@
  </action>
  <action title="action_new_content" action_id="new_content" category="object"
     condition_expr="python:object.getTypeInfo().cps_proxy_type != 'document'"
-    url_expr="string:${object_url}/content_create?type_name=Image"
-    visible="True">
+    url_expr="string:${object_url}/folder_factories" visible="True">
   <permission value="Modify portal content"/>
  </action>
  <action title="action_folder_contents" action_id="contents" category="object"
