@@ -34,3 +34,4 @@ New internal features:
   products, so it was changes to the more generic method of using getImgTag.
 - #1405: if there is only one content type allowed in folder_factories, skip 
   directly to the creation of that document
+- rollback for [32481] as this is taken care now by folder_factories
